Makes a few styling tweaks, mostly for mobile but also to correct weird spacing.

--- a/web/src/stylesheets/templates/template-stylequiz.scss
+++ b/web/src/stylesheets/templates/template-stylequiz.scss
@@ -1,16 +1,23 @@
 @import "../config/base-import";
 @import "../components/partials/property-editor";
 
-#header {
+.l-header {
   padding-bottom: 20px;
+
+  .styles-comp {
+    margin-top: 60px;
+  }
 }
 
 .styles-comp {
-  margin-top: 60px;
   text-transform: uppercase;
   font-size: 24px;
   border-bottom: 1px solid $color-black;
   padding-bottom: 50px;
+
+  + .styles-comp {
+    margin-top: 60px;
+  }
 
   img {
     max-width: 100%;
@@ -19,8 +26,26 @@
     margin-bottom: 30px;
   }
 
+  h2 {
+    a {
+      @include style-button-base;
+      @include style-button-large;
+      font-size: 18px;
+      background-color: $color-orange-red;
+      padding: 20px;
+      width: 60%;
+
+      &:hover {
+        background-color: $color-red;
+      }
+
+      @include breakpoint($bp-mobile-only) {
+        width: 100%;
+      }
+    }
+  }
+
   @include breakpoint($bp-tablets-portrait) {
-    margin-top: 160px;
 
     img {
       margin-bottom: 10px;
@@ -75,6 +100,12 @@ form {
   .password {
     margin-top: $spacing-between-boxes/2;
   }
+
+  &.birthdate_form {
+    table {
+      margin: 0 auto;
+    }
+  }
 }
 
 .label,
@@ -89,23 +120,40 @@ label {
   }
 }
 
+.step1_content,
+.step8_content {
+  .question + .question {
+    margin-top: $spacing-between-boxes;
+  }
+}
+
 .extra_value_renderer {
   > div {
-    display: inline-block;
-    vertical-align: middle;
+    .btn {
+      width: 100%;
+      margin: 2px;
+      padding: 20px 25px;
+    }
   }
 
   @include breakpoint($bp-tablets-portrait) {
     > div {
+      display: inline-block;
+      vertical-align: middle;
+
+      .btn {
+        margin: 8px;
+        padding: 10px;
+      }
 
       &:first-child {
-        button {
+        .btn {
           border-radius: 2px 2px 4px 4px;
         }
       }
 
       + div {
-        button {
+        .btn {
           border-left: 0;
         }
       }
@@ -359,8 +407,28 @@ input[type="password"] {
 
 .submit_button {
   margin-top: $spacing-between-boxes/4;
-
 }
 
+
+.powered-by {
+  margin-top: 30px;
+  text-align: center;
+  font-size: 16px;
+  color: #fff;
+  font-family: "OpenSans_Light", Arial, Verdana, sans-serif;
+}
+
+.powered-by {
+  p {
+    margin: 10px 0 8px;
+  }
+
+  img {
+    max-width: 250px;
+    height: auto;
+    width: auto;
+    display: inline;
+  }
+}
 
 
